--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@types/leaflet": "^1.9.21",
     "@types/nodemailer": "^7.0.5",
+    "cheerio": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.9.0",
     "clsx": "^2.1.1",
@@ -43,6 +44,7 @@
     "next-auth": "^4.24.13",
     "next-cloudinary": "^6.17.5",
     "nodemailer": "^7.0.12",
+    "openai": "^6.17.0",
     "prisma": "^5.22.0",
     "react": "^19.0.0-rc-66855b96-20241106",
     "react-dom": "^19.0.0-rc-66855b96-20241106",
@@ -51,6 +53,7 @@
     "react-map-gl": "^8.1.0",
     "recharts": "^3.7.0",
     "resend": "^6.8.0",
+    "rss-parser": "^3.13.0",
     "sonner": "^2.0.7",
     "stripe": "^20.3.0",
     "tailwind-merge": "^3.4.0",
